# Python-Mastery

./: .gitignore
L1 FOUNDATIONS/KNOWLEDGE/: l1task.py
L1 FOUNDATIONS/MASTERY_TEST/bankaccount_class/: bankaccount.py
L1 FOUNDATIONS/MINI CHALLENGES/custom_stack_queue/: custom_s_q.py
L1 FOUNDATIONS/MINI CHALLENGES/eq_hash_/: eq_hash.py
L1 FOUNDATIONS/MINI CHALLENGES/own_csv/: test.csv  tiny_csv.py
L1 FOUNDATIONS/MINI CHALLENGES/own_functools/: my_reduce.py
L1 FOUNDATIONS/MINI CHALLENGES/own_list/: ownlist_dunder.py
L1 FOUNDATIONS/PROJECTS/adv_game/: game_class.py  game_manage.py  main_game.py
L1 FOUNDATIONS/PROJECTS/contact_book/: contacts.txt  contacts_class.py  main_contacts.py  manage_contacts.py
L1 FOUNDATIONS/PROJECTS/exp_tracker/: exp_class.py  exp_main.py  exp_manage.py  expenses.csv
L1 FOUNDATIONS/PROJECTS/todo_app/: tasks.txt  todl1.py  todo_manage.py  todo_task.py
L1 FOUNDATIONS/PROJECTS/unit_converter/: pyproject.toml
L2 INTERMIDATE/KNOWLEDGE_L2/: knowledge_l2.py
L2 INTERMIDATE/MINI_CHALLENGES/: fibonacci_challenge.py  http_client.py  retry_challenge.py  scratch_lru_cache.py  timer_context.py
L2 INTERMIDATE/PROJECTS_L2/Plugins_system/: main.py  plugins.py  register.py  test_register.py
L2 INTERMIDATE/PROJECTS_L2/api_lib/: demo.py  pyproject.toml
L2 INTERMIDATE/PROJECTS_L2/cli_tool_project/: pyproject.toml  sample.txt
L2 INTERMIDATE/l2-011-PACKAGING/: README.md  pyproject.toml
L2 INTERMIDATE/l2-011-PACKAGING/src/textkit/: __init__.py  core.py
L2 INTERMIDATE/l2-011-PACKAGING/tests/: test_core.py
(+22 files in other folders)
