[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textkit"
version = "0.1.0"
description = "A tiny text utility toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ahmed" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
textkit = "textkit.core:main"